# src/main/resources/openapi-GENERATED.yml
@@ -137,13 +137,13 @@ paths:
           type: string
       - name: since
         in: query
-        required: true
+        required: false
         schema:
           type: string
           format: date-time
       - name: end
         in: query
-        required: true
+        required: false
         schema:
           type: string
           format: date-time
@@ -220,9 +220,7 @@ paths:
               schema:
                 type: object
                 additionalProperties:
-                  type: array
-                  items:
-                    $ref: "#/components/schemas/TelemetryResponse"
+                  $ref: "#/components/schemas/TripDetailsResponse"
   /api/devices:
     get:
       tags:
@@ -344,3 +342,33 @@ components:
           type: string
         endLocation:
           type: string
+    TripDetailsResponse:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+        deviceId:
+          type: string
+        startTime:
+          type: string
+          format: date-time
+        endTime:
+          type: string
+          format: date-time
+        startLocation:
+          type: string
+        endLocation:
+          type: string
+        timed_data:
+          type: array
+          items:
+            type: object
+            additionalProperties:
+              type: object
+        aggregated_data:
+          type: array
+          items:
+            type: object
+            additionalProperties:
+              type: object
